@@ -10,6 +10,9 @@ perl2python.pl is the main executable code.
 diary.txt is a diary of workflow and process
 changelog.txt is a less detailed version of diary just detailing changes
 
+** Running the code ** 
+Code takes from standard input, reads to standard out. 
+
 ** Requirements **
 Subset 0
 simple print statements (with explicit new lines)
@@ -51,3 +54,7 @@ open
 functions
 more complex uses of features from subsets 1-4
 self-application (translating itself to python)
+
+** Notes **
+Code does not error check, assumes correct Perl.
+
