@@ -1,0 +1,9 @@
+#!/usr/bin/perl -w
+
+#	
+#	Plan 
+#	Handle everything as a single string, parsing with ; {} \n boundaries
+#	Step 1: Ensuring correct indentation and handling of {}s and ;s.
+#	If this works, individual statements are isolated in the process,
+#	allowing for better and easier processing of statements later.
+#
